# pymta

./: .gitignore  .hgignore  .travis.yml  Changelog.txt  MANIFEST.in  README.md  VERSION.txt  appveyor.yml  assemble_source_release.py  dev_requirements.txt  mysmtpd.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: Makefile  conf.py  index.txt
examples/: debugging_server.py
pymta/: __init__.py  api.py  authenticator.py  command_parser.py  compat.py  default_policy.py  exceptions.py  model.py  mta.py  mtathread.py  processor.py  release.py  session.py  smtp_session.py  smtpd.py  statemachine.py  test_util.py  validation.py
pymta/lib/: __init__.py  distribution_helpers.py  simple_super.py  testcase.py
tests/: basic_message_sending_test.py  basic_smtp_test.py  command_parsing_test.py  policy_output_test.py  policy_test.py  schema_test.py  smtp_parameter_validation_test.py  statemachine_test.py  util.py  validation_schema_test.py  validator_test.py
