[metadata]
name          = pymta
version       = file: VERSION.txt
description   = library to build a custom SMTP server

long_description = file:README.md
long_description_content_type = text/markdown

author        = Felix Schwarz
author_email  = felix.schwarz@oss.schwarz.eu
url           = https://github.com/FelixSchwarz/pymta
license       = MIT
license_file  = COPYING.txt

classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Communications :: Email
	Topic :: Software Development :: Libraries :: Python Modules
project_urls =
	Code = https://github.com/FelixSchwarz/pymta
	Issue tracker = https://github.com/FelixSchwarz/pymta/issues


[options]
python_requires = >= 2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*

packages = find:
zip_safe = false
include_package_data = true

install_requires =
	pycerberus >= 0.5

[options.extras_require]
testing =
	PythonicTestCase

[bdist_wheel]
universal = 1

